# core-library

./: .gitignore  .pylintrc  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  auto_request_review.yml
.github/workflows/: cli_test.yaml  codespell.yaml  image_build.yml  image_build_test.yml  python-package.yml  server_test.yaml
docker/: Dockerfile  Dockerfile.server
docs/core/: extracting.md
examples/: try_config.py  try_qa_provider.py  try_ragas_eval.py
examples/document_chunks/: try_spacy_splitter.py
examples/document_loaders/: try_docx.py  try_pdf.py
examples/document_transformers/: try_pdf2csv.py  try_transform.py
examples/kube/: try_custom_controller.py  try_model.py  try_secret.py
examples/qa_provider/: try_openai.py  try_zhipuai.py
examples/testdata/: ragas.csv
libs/cli/: Makefile  README.md  pyproject.toml  setup.py
libs/cli/kubeagi_cli/: cli.py  convert.py  server.py
libs/cli/kubeagi_cli/convert/: document.py
libs/cli/kubeagi_cli/serve/: reranking.py  whisper.py
libs/core/: Makefile  README.md  pyproject.toml  setup.py
libs/core/cli/: README.md  pyproject.toml
libs/core/cli/core_cli/: cli.py
libs/core/kubeagi_core/: config.py  document.py
libs/core/kubeagi_core/document_chunks/: base.py  spacy_splitter.py
libs/core/kubeagi_core/document_loaders/: __init__.py  base.py  docx.py  pdf.py
libs/core/kubeagi_core/document_transformers/: pdf2csv.py  special_characters.py  transform.py
libs/core/kubeagi_core/embeddings/: openai.py
libs/core/kubeagi_core/evaluation/: ragas_eval.py
libs/core/kubeagi_core/kube/: client.py  configmap.py  custom_controller.py  custom_resources.py  secret.py
libs/core/kubeagi_core/qa_provider/: base.py  openai.py  prompt.py  zhipuai.py
libs/ragas_once/src/ragas_once/: eval.py
libs/ragas_once/src/ragas_once/embeddings/: openai.py
tests/: example_test.sh
