[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "kubeagi_core"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docx2txt==0.8",
    "kubernetes==25.3.0",
    "langchain>=0.1.0",
    "ragas>=0.1.0",
    "spacy==3.5.4",
    "zhipuai==1.0.7",
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==3.1.0"]

[project.urls]
Homepage = "https://github.com/kubeagi/core-library"
Issues = "https://github.com/kubeagi/core-library/issues"