[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "kubeagi_core"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docx2txt==0.8",
    "emoji==2.2.0",
    "ftfy==6.1.1",
    "kubernetes==25.3.0",
    "langchain>=0.1.0",
    "opencc-python-reimplemented==0.1.7",
    "selectolax==0.3.17",
    "spacy==3.5.4",
    "zhipuai==1.0.7",
    "PyMuPDF==1.24.1",
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==3.1.0"]

[project.urls]
Homepage = "https://github.com/kubeagi/core-library"
Issues = "https://github.com/kubeagi/core-library/issues"